--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Medieval_Env/Maps/The_Village_Interior.The_Village_Interior
+GameDefaultMap=/Game/Medieval_Env/Maps/Main_Menu.Main_Menu
 GlobalDefaultGameMode=/Game/_Game/Gamemode/BP_ProjectDominoGameModeBase.BP_ProjectDominoGameModeBase_C
-EditorStartupMap=/Game/Medieval_Env/Maps/The_Village_Interior.The_Village_Interior
+EditorStartupMap=/Game/Medieval_Env/Maps/Main_Menu.Main_Menu
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
