--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,15 +2,21 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=2B1E9227408F16141F9B188CE3A49E99
+Description=Edmund And Eliza, a game developed in Unreal Engine 5 for a Senior Capstone Project at CSUN.
+ProjectName=Edmund And Eliza
+CompanyName=Domino Squad
+CompanyDistinguishedName=Domino Squad
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "DB5CB17643A5338B2A99F3BDCE0CACDE", "Edmund And Eliza")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "BA05176B4D9AEA3C917CF49089DEB902", "Edmund And Eliza")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
+BuildConfiguration=PPBC_Shipping
 BuildTarget=
 LaunchOnTarget=
-StagingDirectory=(Path="C:/Users/aviks/Documents/Edmund And Eliza Packaged Test Builds/V9")
-FullRebuild=False
-ForDistribution=False
+StagingDirectory=(Path="../../../../../../Users/aviks/Documents/Edmund And Eliza Packaged Test Builds/FinishedBuild1")
+FullRebuild=True
+ForDistribution=True
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
@@ -26,6 +32,7 @@ bForceOneChunkPerFile=False
 MaxChunkSize=0
 bBuildHttpChunkInstallData=False
 HttpChunkInstallDataDirectory=(Path="")
+WriteBackMetadataToAssetRegistry=Disabled
 bCompressed=True
 PackageCompressionFormat=Oodle
 bForceUseProjectCompressionFormatIgnoreHardwareOverride=False
@@ -54,45 +61,63 @@ bCookAll=False
 bCookMapsOnly=True
 bSkipEditorContent=False
 bSkipMovies=False
--IniKeyBlacklist=KeyStorePassword
--IniKeyBlacklist=KeyPassword
--IniKeyBlacklist=rsa.privateexp
--IniKeyBlacklist=rsa.modulus
--IniKeyBlacklist=rsa.publicexp
--IniKeyBlacklist=aes.key
--IniKeyBlacklist=SigningPublicExponent
--IniKeyBlacklist=SigningModulus
--IniKeyBlacklist=SigningPrivateExponent
--IniKeyBlacklist=EncryptionKey
--IniKeyBlacklist=DevCenterUsername
--IniKeyBlacklist=DevCenterPassword
--IniKeyBlacklist=IOSTeamID
--IniKeyBlacklist=SigningCertificate
--IniKeyBlacklist=MobileProvision
--IniKeyBlacklist=IniKeyBlacklist
--IniKeyBlacklist=IniSectionBlacklist
-+IniKeyBlacklist=KeyStorePassword
-+IniKeyBlacklist=KeyPassword
-+IniKeyBlacklist=rsa.privateexp
-+IniKeyBlacklist=rsa.modulus
-+IniKeyBlacklist=rsa.publicexp
-+IniKeyBlacklist=aes.key
-+IniKeyBlacklist=SigningPublicExponent
-+IniKeyBlacklist=SigningModulus
-+IniKeyBlacklist=SigningPrivateExponent
-+IniKeyBlacklist=EncryptionKey
-+IniKeyBlacklist=DevCenterUsername
-+IniKeyBlacklist=DevCenterPassword
-+IniKeyBlacklist=IOSTeamID
-+IniKeyBlacklist=SigningCertificate
-+IniKeyBlacklist=MobileProvision
-+IniKeyBlacklist=IniKeyBlacklist
-+IniKeyBlacklist=IniSectionBlacklist
--IniSectionBlacklist=HordeStorageServers
-+IniSectionBlacklist=HordeStorageServers
+-IniKeyDenylist=KeyStorePassword
+-IniKeyDenylist=KeyPassword
+-IniKeyDenylist=rsa.privateexp
+-IniKeyDenylist=rsa.modulus
+-IniKeyDenylist=rsa.publicexp
+-IniKeyDenylist=aes.key
+-IniKeyDenylist=SigningPublicExponent
+-IniKeyDenylist=SigningModulus
+-IniKeyDenylist=SigningPrivateExponent
+-IniKeyDenylist=EncryptionKey
+-IniKeyDenylist=DevCenterUsername
+-IniKeyDenylist=DevCenterPassword
+-IniKeyDenylist=IOSTeamID
+-IniKeyDenylist=SigningCertificate
+-IniKeyDenylist=MobileProvision
+-IniKeyDenylist=IniKeyDenylist
+-IniKeyDenylist=IniSectionDenylist
++IniKeyDenylist=IniKeyDenylist
++IniKeyDenylist=IniSectionDenylist
++IniKeyDenylist=KeyStorePassword
++IniKeyDenylist=KeyPassword
++IniKeyDenylist=rsa.privateexp
++IniKeyDenylist=rsa.modulus
++IniKeyDenylist=rsa.publicexp
++IniKeyDenylist=aes.key
++IniKeyDenylist=SigningPublicExponent
++IniKeyDenylist=SigningModulus
++IniKeyDenylist=SigningPrivateExponent
++IniKeyDenylist=EncryptionKey
++IniKeyDenylist=DevCenterUsername
++IniKeyDenylist=DevCenterPassword
++IniKeyDenylist=IOSTeamID
++IniKeyDenylist=SigningCertificate
++IniKeyDenylist=MobileProvision
++IniKeyDenylist=IniKeyBlacklist
++IniKeyDenylist=IniSectionBlacklist
+-IniSectionDenylist=HordeStorageServers
+-IniSectionDenylist=StorageServers
++IniSectionDenylist=StorageServers
++IniSectionDenylist=HordeStorageServers
++MapsToCook=(FilePath="/Game/Medieval_Env/Maps/Main_Menu")
 +MapsToCook=(FilePath="/Game/Medieval_Env/Maps/The_Village")
 +MapsToCook=(FilePath="/Game/Medieval_Env/Maps/The_Village_Interior")
-PerPlatformBuildConfig=()
++MapsToCook=(FilePath="/Game/Medieval_Env/Maps/The_Castle")
++MapsToCook=(FilePath="/Game/_Game7/CutsceneMaps/Cutscene1")
++MapsToCook=(FilePath="/Game/_Game7/CutsceneMaps/Cutscene2")
++MapsToCook=(FilePath="/Game/_Game7/CutsceneMaps/Cutscene3")
++MapsToCook=(FilePath="/Game/_Game7/CutsceneMaps/Cutscene4")
++MapsToCook=(FilePath="/Game/_Game7/CutsceneMaps/Cutscene5")
++MapsToCook=(FilePath="/Game/_Game7/CutsceneMaps/Cutscene6")
++MapsToCook=(FilePath="/Game/_Game7/CutsceneMaps/Cutscene7")
++DirectoriesToAlwaysCook=(Path="/Interchange/Functions")
++DirectoriesToAlwaysCook=(Path="/Interchange/gltf")
++DirectoriesToAlwaysCook=(Path="/Interchange/Materials")
++DirectoriesToAlwaysCook=(Path="/Interchange/Pipelines")
++DirectoriesToAlwaysCook=(Path="/Interchange/Utilities")
+PerPlatformBuildConfig=(("Windows", PPBC_Shipping))
 PerPlatformTargetFlavorName=()
 PerPlatformBuildTarget=()
 
