--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -51,6 +51,12 @@ r.DefaultFeature.MotionBlur=False
 r.AntiAliasingMethod=4
 r.MSAACount=4
 
+r.ScreenPercentage=50
+r.Upscale.Quality=0
+
+fx.GPUSimulationTextureSizeX=128
+fx.GPUSimulationTextureSizeY=128
+
 [/Script/WorldPartitionEditor.WorldPartitionEditorSettings]
 CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 
@@ -59,9 +65,10 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/ProjectDomino")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="ProjectDominoGameModeBase")
 bUseFixedFrameRate=False
-bSmoothFrameRate=True
+bSmoothFrameRate=False
 SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=30.000000),UpperBound=(Type=Exclusive,Value=60.000000))
 MinDesiredFrameRate=45.000000
+FixedFrameRate=60.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
